clean hsfs notebooks

--- a/notebooks/featurestore/hsfs/feature_engineering.ipynb
+++ b/notebooks/featurestore/hsfs/feature_engineering.ipynb
@@ -56,7 +56,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>9</td><td>application_1604892119374_0011</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1604892119374_0011/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1604892119374_0011_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>4</td><td>application_1604957327609_0008</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1604957327609_0008/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1604957327609_0008_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -214,7 +214,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7feba97af290>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f0a46b0a290>"
      ]
     }
    ],
@@ -297,7 +297,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7feb916b2290>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f0a2ea0d290>"
      ]
     }
    ],
@@ -314,14 +314,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<hsfs.feature_group.FeatureGroup object at 0x7f0a46b01b10>"
+     ]
+    }
+   ],
    "source": [
     "sales_part_fg_meta = fs.create_feature_group(name=\"sales_fg\",\n",
     "                                        version=2,\n",
     "                                        partition_key=['store'],\n",
     "                                        description=\"Sales related features\",\n",
+    "                                        time_travel_format=None,                                                                                          \n",
     "                                        statistics_config=False)\n",
     "sales_part_fg_meta.save(sales_fg)"
    ]
@@ -339,14 +348,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7feba97a6ed0>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f0a46bc7dd0>"
      ]
     }
    ],
@@ -373,14 +382,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7feba97a6510>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f0a471e6890>"
      ]
     }
    ],
@@ -407,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,14 +467,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f2a9217ed50>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f0a46bc73d0>"
      ]
     }
    ],
@@ -551,9 +560,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]"
+     ]
+    }
+   ],
    "source": [
     "sales_fg = fs.get_feature_group('sales_fg', 1)\n",
     "print(sales_fg.get_tag())"
@@ -570,14 +587,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7feba988d390>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f0a46d7a490>"
      ]
     }
    ],
@@ -593,13 +610,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "exogenous_fg_meta = fs.get_feature_group('exogenous_fg', 2)\n",
     "exogenous_fg_meta.delete()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
