--- a/notebooks/featurestore/hsfs/training_datasets.ipynb
+++ b/notebooks/featurestore/hsfs/training_datasets.ipynb
@@ -31,7 +31,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>10</td><td>application_1604892119374_0012</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1604892119374_0012/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1604892119374_0012_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>6</td><td>application_1604957327609_0010</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1604957327609_0010/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1604957327609_0010_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -105,7 +105,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.training_dataset.TrainingDataset object at 0x7fb5b80738d0>"
+      "<hsfs.training_dataset.TrainingDataset object at 0x7f94701b38d0>"
      ]
     }
    ],
@@ -129,14 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.training_dataset.TrainingDataset object at 0x7fb5d03db550>"
+      "<hsfs.training_dataset.TrainingDataset object at 0x7f948851b610>"
      ]
     }
    ],
@@ -160,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.training_dataset.TrainingDataset object at 0x7fb5d03db050>"
+      "<hsfs.training_dataset.TrainingDataset object at 0x7f9488528510>"
      ]
     }
    ],
@@ -222,14 +222,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SELECT `fg0`.`sales_last_year_store`, `fg0`.`sales_last_month_store_dep`, `fg0`.`sales_last_year_store_dep`, `fg0`.`sales_last_quarter_store`, `fg0`.`weekly_sales`, `fg0`.`store`, `fg0`.`is_holiday`, `fg0`.`sales_last_six_month_store`, `fg0`.`sales_last_month_store`, `fg0`.`sales_last_six_month_store_dep`, `fg0`.`dept`, `fg0`.`date`, `fg0`.`sales_last_quarter_store_dep`, `fg1`.`fuel_price`, `fg1`.`unemployment`, `fg1`.`cpi`\n",
+      "SELECT `fg0`.`sales_last_quarter_store_dep`, `fg0`.`store`, `fg0`.`sales_last_month_store_dep`, `fg0`.`sales_last_year_store`, `fg0`.`sales_last_quarter_store`, `fg0`.`sales_last_six_month_store_dep`, `fg0`.`sales_last_year_store_dep`, `fg0`.`sales_last_month_store`, `fg0`.`dept`, `fg0`.`sales_last_six_month_store`, `fg0`.`weekly_sales`, `fg0`.`is_holiday`, `fg0`.`date`, `fg1`.`fuel_price`, `fg1`.`unemployment`, `fg1`.`cpi`\n",
       "FROM `demo_fs_meb10000`.`sales_fg_1` `fg0`\n",
       "INNER JOIN `demo_fs_meb10000`.`exogenous_fg_1` `fg1` ON `fg0`.`date` = `fg1`.`date` AND `fg0`.`store` = `fg1`.`store`\n",
       "VersionWarning: No version provided for getting training dataset `sales_model`, defaulting to `1`."
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,14 +277,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.training_dataset.TrainingDataset object at 0x7fb5d0271490>"
+      "<hsfs.training_dataset.TrainingDataset object at 0x7f94884e0150>"
      ]
     }
    ],
@@ -307,14 +307,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.training_dataset.TrainingDataset object at 0x7fb5d01722d0>"
+      "<hsfs.training_dataset.TrainingDataset object at 0x7f948849f210>"
      ]
     }
    ],
@@ -416,22 +416,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---------------------+--------------------------+-------------------------+------------------------+------------+-----+----------+--------------------------+----------------------+------------------------------+----+-------------------+----------------------------+----------+------------+-----------+\n",
-      "|sales_last_year_store|sales_last_month_store_dep|sales_last_year_store_dep|sales_last_quarter_store|weekly_sales|store|is_holiday|sales_last_six_month_store|sales_last_month_store|sales_last_six_month_store_dep|dept|               date|sales_last_quarter_store_dep|fuel_price|unemployment|        cpi|\n",
-      "+---------------------+--------------------------+-------------------------+------------------------+------------+-----+----------+--------------------------+----------------------+------------------------------+----+-------------------+----------------------------+----------+------------+-----------+\n",
-      "|                  0.0|                       0.0|                      0.0|                     0.0|    32362.95|   20|     false|                       0.0|                   0.0|                           0.0|  55|2010-02-05 00:00:00|                         0.0|     2.784|       8.187|204.2471935|\n",
-      "|                  0.0|                       0.0|                      0.0|                     0.0|    63787.83|   20|     false|                       0.0|                   0.0|                           0.0|  94|2010-02-05 00:00:00|                         0.0|     2.784|       8.187|204.2471935|\n",
-      "|                  0.0|                       0.0|                      0.0|                     0.0|    17597.83|   20|     false|                       0.0|                   0.0|                           0.0|  22|2010-02-05 00:00:00|                         0.0|     2.784|       8.187|204.2471935|\n",
-      "|                  0.0|                       0.0|                      0.0|                     0.0|     9488.37|   20|     false|                       0.0|                   0.0|                           0.0|  30|2010-02-05 00:00:00|                         0.0|     2.784|       8.187|204.2471935|\n",
-      "|                  0.0|                       0.0|                      0.0|                     0.0|    85812.69|   20|     false|                       0.0|                   0.0|                           0.0|   2|2010-02-05 00:00:00|                         0.0|     2.784|       8.187|204.2471935|\n",
-      "+---------------------+--------------------------+-------------------------+------------------------+------------+-----+----------+--------------------------+----------------------+------------------------------+----+-------------------+----------------------------+----------+------------+-----------+\n",
+      "+----------------------------+-----+--------------------------+---------------------+------------------------+------------------------------+-------------------------+----------------------+----+--------------------------+------------+----------+-------------------+----------+------------+-----------+\n",
+      "|sales_last_quarter_store_dep|store|sales_last_month_store_dep|sales_last_year_store|sales_last_quarter_store|sales_last_six_month_store_dep|sales_last_year_store_dep|sales_last_month_store|dept|sales_last_six_month_store|weekly_sales|is_holiday|               date|fuel_price|unemployment|        cpi|\n",
+      "+----------------------------+-----+--------------------------+---------------------+------------------------+------------------------------+-------------------------+----------------------+----+--------------------------+------------+----------+-------------------+----------+------------+-----------+\n",
+      "|                         0.0|   20|                       0.0|                  0.0|                     0.0|                           0.0|                      0.0|                   0.0|  55|                       0.0|    32362.95|     false|2010-02-05 00:00:00|     2.784|       8.187|204.2471935|\n",
+      "|                         0.0|   20|                       0.0|                  0.0|                     0.0|                           0.0|                      0.0|                   0.0|  94|                       0.0|    63787.83|     false|2010-02-05 00:00:00|     2.784|       8.187|204.2471935|\n",
+      "|                         0.0|   20|                       0.0|                  0.0|                     0.0|                           0.0|                      0.0|                   0.0|  22|                       0.0|    17597.83|     false|2010-02-05 00:00:00|     2.784|       8.187|204.2471935|\n",
+      "|                         0.0|   20|                       0.0|                  0.0|                     0.0|                           0.0|                      0.0|                   0.0|  30|                       0.0|     9488.37|     false|2010-02-05 00:00:00|     2.784|       8.187|204.2471935|\n",
+      "|                         0.0|   20|                       0.0|                  0.0|                     0.0|                           0.0|                      0.0|                   0.0|   2|                       0.0|    85812.69|     false|2010-02-05 00:00:00|     2.784|       8.187|204.2471935|\n",
+      "+----------------------------+-----+--------------------------+---------------------+------------------------+------------------------------+-------------------------+----------------------+----+--------------------------+------------+----------+-------------------+----------+------------+-----------+\n",
       "only showing top 5 rows"
      ]
     }
@@ -450,14 +450,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "295376"
+      "295125"
      ]
     }
    ],
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,14 +559,14 @@
     "batch_size = 32\n",
     "num_epochs = 1 \n",
     "\n",
-    "def flat_map_impl(example):\n",
+    "def custom_impl(example):\n",
     "    feature_names = [td_feature.name for td_feature in td.schema] \n",
     "    label_name = feature_names.pop(feature_names.index('weekly_sales'))\n",
     "    x = [tf.cast(example[feature_name], tf.float32) for feature_name in feature_names]\n",
     "    y = example[label_name]\n",
     "    return x,y\n",
     "\n",
-    "train_input_custum_processed = train_input_not_processed.map(lambda value: flat_map_impl(value))\\\n",
+    "train_input_custum_processed = train_input_not_processed.map(lambda value: custom_impl(value))\\\n",
     "    .shuffle(num_epochs * batch_size)\\\n",
     "    .repeat(num_epochs * batch_size)\\\n",
     "    .cache()\\\n",
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -590,13 +590,6 @@
    "source": [
     "train_input_custum_processed"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
