hudi test typo fixes

--- a/notebooks/featurestore/hsfs/time_travel_scala.ipynb
+++ b/notebooks/featurestore/hsfs/time_travel_scala.ipynb
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### How Hudi can be used for ML and Feature Pipelines\n",
+    "### How Hopsworks Feature Store time travel operations can be used for ML and Feature Pipelines\n",
     "\n",
     "Hudi is integrated in the Hopsworks Feature Store for doing incremental feature computation and for point-in-time correctness and backfilling of feature data.\n",
     "\n",
@@ -1318,7 +1318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Join featuregroups that correspond to specific point in time\n",
+    "### Join Feature groups that correspond to specific point in time\n",
     "If we are interetsted to join Feature groups all of them correspong to one specific point in time then we can issue `asOf` method on join `Query` object.  "
    ]
   },
@@ -1374,7 +1374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Join featuregroups that correspond to different points in time\n",
+    "### Join Feature groups that correspond to different points in time\n",
     "Hopswork Feature store also provides functionality to join Feature groups that correspond to different points in time. "
    ]
   },
