--- a/notebooks/featurestore/hsfs/feature_engineering.ipynb
+++ b/notebooks/featurestore/hsfs/feature_engineering.ipynb
@@ -56,7 +56,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>13</td><td>application_1602776478999_0003</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1602776478999_0003/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e02_1602776478999_0003_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>4</td><td>application_1604957327609_0008</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1604957327609_0008/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1604957327609_0008_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,6 +194,7 @@
     "                                       version=1,\n",
     "                                       primary_key=['store'],\n",
     "                                       description=\"Store related features\",\n",
+    "                                       time_travel_format=None,\n",
     "                                       statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True})"
    ]
   },
@@ -206,14 +207,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fd3e4ad8b90>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f0a46b0a290>"
      ]
     }
    ],
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,19 +284,20 @@
     "                                        version=1,\n",
     "                                        primary_key=['store', 'dept', 'date'],\n",
     "                                        description=\"Sales related features\",\n",
+    "                                        time_travel_format=None,                                        \n",
     "                                        statistics_config=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fd3e4b0cbd0>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f0a2ea0d290>"
      ]
     }
    ],
@@ -312,14 +314,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fd3e4d40850>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f0a46b01b10>"
      ]
     }
    ],
@@ -328,6 +330,7 @@
     "                                        version=2,\n",
     "                                        partition_key=['store'],\n",
     "                                        description=\"Sales related features\",\n",
+    "                                        time_travel_format=None,                                                                                          \n",
     "                                        statistics_config=False)\n",
     "sales_part_fg_meta.save(sales_fg)"
    ]
@@ -345,14 +348,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fd3e4b68150>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f0a46bc7dd0>"
      ]
     }
    ],
@@ -362,6 +365,7 @@
     "                                        primary_key=['store', 'dept', 'date'],\n",
     "                                        online_enabled=True,\n",
     "                                        description=\"Sales related features\",\n",
+    "                                        time_travel_format=None,                                             \n",
     "                                        statistics_config=False)\n",
     "sales_part_fg_meta.save(sales_fg)"
    ]
@@ -378,14 +382,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fd3e4d40690>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f0a471e6890>"
      ]
     }
    ],
@@ -396,6 +400,7 @@
     "                                            version=1,\n",
     "                                            primary_key=['store', 'date'],\n",
     "                                            description=\"External features that influence sales, but are not under the control of the distribution chain\",\n",
+    "                                            time_travel_format=None,                                            \n",
     "                                            statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True})\n",
     "exogenous_fg_meta.save(exogenous_fg)"
    ]
@@ -411,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,14 +467,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fd3e4b09ed0>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f0a46bc73d0>"
      ]
     }
    ],
@@ -487,13 +492,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tagging feature group\n",
+    "The feature store enables users to attach tags to feature droup in order to make them discoverable across feature\n",
+    "stores.  A tag is a simple {key: value} association, providing additional information about the data, such as for\n",
+    "example geographic origin. This is useful in an organization as it makes easier to discover for data scientists, reduces\n",
+    "duplicated work in terms of for example data preparation. The tagging feature is only available in the enterprise version."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Define tags that can be attached\n",
+    "The first step is to define a set of tags that can be attached. Such as for example “Country” to tag data as being from\n",
+    "a certain geographic location and “Sport” to further associate a type of Sport with the data.\n",
+    "\n",
+    "![Define tags that can be attached](images/creating_tags.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Attach tags using the UI\n",
+    "Tags can then be attached using the feature store UI or programmatically using the API.\n",
+    "Attaching tags to feature group.\n",
+    "\n",
+    "![Attach tags using the UI](images/attach_tags.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Attach tags using HSFS API"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "sales_fg = fs.get_feature_group('sales_fg', 1)\n",
-    "sales_fg.add_tag('prod')\n",
+    "sales_fg.add_tag('prod')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sales_fg.add_tag('country', value=\"US\")"
    ]
   },
@@ -501,19 +554,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Retrieval\n",
     "From the API you can also list which tags are assigned to a feature group"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'country': 'US'}, {'prod': ''}]"
+      "[]"
      ]
     }
    ],
@@ -533,14 +587,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fd3e4b6a410>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f0a46d7a490>"
      ]
     }
    ],
@@ -549,13 +603,14 @@
     "                                        version=2,\n",
     "                                        primary_key=['store', 'date'],\n",
     "                                        description=\"External features that influence sales, but are not under the control of the distribution chain\",\n",
+    "                                        time_travel_format=None,                                                                                        \n",
     "                                        statistics_config=False)\n",
     "exogenous_fg_meta.save(exogenous_fg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
