[HOPSWORKS-1374] New HUDI fig (#158)
Incremental Ingestion Figure

--- a/notebooks/featurestore/hsfs/time_travel_scala.ipynb
+++ b/notebooks/featurestore/hsfs/time_travel_scala.ipynb
@@ -6,11 +6,7 @@
    "source": [
     "# Time travel operations in Hopsworks Feature Store\n",
     "\n",
-    "In this notebook we will introduce time travel operations in Hopsworks Feature Store (HSFS). Currently HSFS supports Apache Hudi (http://hudi.apache.org/) a storage abstraction/library for doing **incremental** data ingestion to a Hopsworks Feature Store.\n",
-    "\n",
-    "TLDR; Hudi is a storage abstraction/library build on top of Spark. A Hudi dataset stores data in Parquet files and maintains additional metadata to make upserts efficient. A Hudi ingest job is intended to be run as a streaming ingest job, on an interval such as every 15 minutes, reading deltas from a message-bus like Kafka and ingesting the deltas **incrementally** into a data lake.\n",
-    "\n",
-    "![Incremental ETL](./../images/incr_load.png \"Incremetal ETL\")"
+    "In this notebook we will introduce time travel operations in Hopsworks Feature Store (HSFS). Currently HSFS supports Apache Hudi (http://hudi.apache.org/) a storage abstraction/library for doing **incremental** data ingestion to a Hopsworks Feature Store."
    ]
   },
   {
@@ -26,58 +22,14 @@
    "source": [
     "### Motivation\n",
     "\n",
-    "Hudi is an open-source library for doing incremental ingestion of data for large analytical datasets stored on distributed file systems. The library was originally developed at Uber to improve their data latency, but  it is now an Apache project.\n",
+    "Traditional ETL typically involves taking a snapshot of a production database and doing a full load into a data lake (typically stored on a distributed file system). Using the snapshot approach for ETL is simple since the snapshot is immutable and can be loaded as an atomic unit into the data lake. However, the con of taking this approach to doing data ingestion is that it is *slow*. Even if just a single record have been updated since the last data ingestion, the entire table has to be re-written. If you are working with Big Data (TB or PB size datasets) then this will introduce significant *data latency* and *wasted resources* (majority of the writes when ingesting the snapshot is redundant as most of the records have not been updated since the last ETL step). \n",
     "\n",
-    "The main motivation for Hudi is that it reduces the **data latency** for ingesting large datasets into data lakes. Traditional ETL typically involves taking a snapshot of a production database and doing a full load into a data lake (typically stored on a distributed file system). Using the snapshot approach for ETL is simple since the snapshot is immutable and can be loaded as an atomic unit into the data lake. However, the con of taking this approach to doing data ingestion is that it is *slow*. Even if just a single record have been updated since the last data ingestion, the entire table has to be re-written. If you are working with Big Data (TB or PB size datasets) then this will introduce significant *data latency* (up to 24 hours in Uber's case) and *wasted resources* (majority of the writes when ingesting the snapshot is redundant as most of the records have not been updated since the last ETL step). \n",
+    "This motivates the use-case for **incremental** data ingestion. Incremental data ingestion means that only deltas/changelogs since the last ingestion are inserted. With incremental processing, you process data in *mini-batches* and run the spark job frequently. The incremental model makes better use of resources and makes it easier to do complex processing and joins.\n",
     "\n",
-    "This motivates the use-case for **incremental** data ingestion. Incremental data ingestion means that only deltas/changelogs since the last ingestion are inserted. \n",
-    "\n",
-    "Incremental ingestion lies in-between traditional batch ingestion and the streaming use-case. It can provide data latency as low as *minutes* for petabyte-scale datasets. The incremental mode for processing introduces new trade-offs compared to streaming and batch. It has lower data latency than traditional batch processing, but a slightly higher latency than stream processing. Why not go full-streaming instead of the incremental processing? It boils down to your requirements and trade-offs. If you need data latency in the order of seconds, then you have to use stream processing (e.g fraud detection). However if your business can do with data latency in the order of say 5 minutes (applications which are fine with this latency could be feature engineering pipelines, building dashboards, or doing near-real-time analytics), then incremental processing really shines. \n",
-    "\n",
-    "With incremental processing, you process data in *mini-batches* and run the spark job frequently, every 15 minutes or so. By using mini-batches rather than record-by-record streaming, the incremental model makes better use of resources and makes it easier to do complex processing and joins which are more suited for the batch-style of processing rather than stream-processing.\n",
-    "\n",
-    "![Near Real Time](./../images/near_real_time.jpg \"Near Real Time\")\n",
-    "\n",
-    "If the data is immutable by design, incremental processing can be done without any additional ingestion library, just use the *append* primitive supported in HDFS through some HDFS client, such as Spark, e.g:\n",
-    "\n",
-    "```scala\n",
-    "newRecordsDf = (...)\n",
-    "newRecordsDf.write.format(\"hive\").mode(\"append\").insertInto(tableName)\n",
-    "```\n",
-    "\n",
-    "Unfortunately, data is rarely immutable in practice. A bank transaction might be reverted, a customer might change his or her home adress, and a customer review might be updated, to give a few examples. This is where Hudi comes into the picture. Hudi stands for `Hadoop Upserts anD Incrementals` and brings two new primitives for data engineering on distributed file systems (in addition to append/read):\n",
+    "In addition data is rarely immutable in practice. A bank transaction might be reverted, a customer might change his or her home adress, and a customer review might be updated, to give a few examples. This is where Hudi comes into the picture. Hudi stands for `Hadoop Upserts anD Incrementals` and brings two new primitives for data engineering on distributed file systems (in addition to append/read):\n",
     "\n",
     "- `Upsert`: the ability to do insertions (appends) and updates efficiently. \n",
-    "- `Incremental reads`: the ability to read datasets incrementally using the notion of \"commits\".\n",
-    "\n",
-    "![Upserts](./../images/upsert_illustration.png \"Upserts\")\n",
-    "\n",
-    "Lets consider the process of updating a single record in a data lake of Parquet files stored on a distributed file system. Without using Hudi, this would entail scanning the entire dataset to find the record in order to do the update and then rewrite the entire dataset: \n",
-    "\n",
-    "```scala\n",
-    "updatedRecordsDf = (...)\n",
-    "updatedRecordsDf.write.format(\"hive\").mode(\"overwrite\").insertInto(tableName) \n",
-    "```\n",
-    "\n",
-    "This does not scale and HDFS/Parquet is not designed for this use-case. With Hudi, the upsert operation is a first-class primitive in the ingestion framework and it is optimized to be fast using index-lookups and atomic updates. We will see how we can use Hudi for this purpose later on in the notebook, but essentially it is as simple as :\n",
-    "\n",
-    "```scala\n",
-    "updatedRecordsDf = (...)\n",
-    "upsertDf.write.format(\"org.apache.hudi\")\n",
-    "              .option(\"hoodie.datasource.write.operation\", \"upsert\")\n",
-    "              ...\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### What is Hudi\n",
-    "\n",
-    "Hudi is a Spark library that is intended to be run as a streaming ingest job, and ingests data as mini-batches (typically on the order of one to two minutes). A Hudi job generally reads delta-updates from a message-bus like Kafka, and upserts them into a data lake stored on a distributed file system. By maintaining bloom indexes and commit logs, Hudi provide ACID transactions, time-travel and scalable upserts.\n",
-    "\n",
-    "![Hudi Dataset](./../images/hudi_dataset.png \"Hudi Dataset\")"
+    "- `Incremental reads`: the ability to read datasets incrementally using the notion of \"commits\"."
    ]
   },
   {
@@ -428,14 +380,14 @@
     }
    ],
    "source": [
-    "val economyFg = (fs.createFeatureGroup().\n",
-    "                name(\"economy_fg\").\n",
-    "                description(\"Hudi Household Economy Feature Group\").\n",
-    "                version(1).\n",
-    "                primaryKeys(Seq(\"id\")).\n",
-    "                partitionKeys(Seq(\"year\")).\n",
-    "                timeTravelFormat(TimeTravelFormat.HUDI).\n",
-    "                build())"
+    "val economyFg = (fs.createFeatureGroup()\n",
+    "                .name(\"economy_fg\")\n",
+    "                .description(\"Hudi Household Economy Feature Group\")\n",
+    "                .version(1)\n",
+    "                .primaryKeys(Seq(\"id\"))\n",
+    "                .partitionKeys(Seq(\"year\"))\n",
+    "                .timeTravelFormat(TimeTravelFormat.HUDI)\n",
+    "                .build())"
    ]
   },
   {
@@ -452,14 +404,14 @@
     }
    ],
    "source": [
-    "val demographyFg = (fs.createFeatureGroup().\n",
-    "                    name(\"demography_fg\").\n",
-    "                    description(\"Hudi Demographic Feature Group\").\n",
-    "                    version(1).\n",
-    "                    primaryKeys(Seq(\"id\")).\n",
-    "                    partitionKeys(Seq(\"zipcode\")).\n",
-    "                    timeTravelFormat(TimeTravelFormat.HUDI).\n",
-    "                    build())"
+    "val demographyFg = (fs.createFeatureGroup()\n",
+    "                    .name(\"demography_fg\")\n",
+    "                    .description(\"Hudi Demographic Feature Group\")\n",
+    "                    .version(1)\n",
+    "                    .primaryKeys(Seq(\"id\"))\n",
+    "                    .partitionKeys(Seq(\"zipcode\"))\n",
+    "                    .timeTravelFormat(TimeTravelFormat.HUDI)\n",
+    "                    .build())"
    ]
   },
   {
@@ -476,14 +428,14 @@
     }
    ],
    "source": [
-    "val classFg = (fs.createFeatureGroup().\n",
-    "                name(\"class_fg\").\n",
-    "                description(\"Hudi Class Feature Group\").\n",
-    "                version(1).\n",
-    "                primaryKeys(Seq(\"id\")).\n",
-    "                partitionKeys(Seq(\"year\")).\n",
-    "                timeTravelFormat(TimeTravelFormat.HUDI).\n",
-    "                build())"
+    "val classFg = (fs.createFeatureGroup()\n",
+    "                .name(\"class_fg\")\n",
+    "                .description(\"Hudi Class Feature Group\")\n",
+    "                .version(1)\n",
+    "                .primaryKeys(Seq(\"id\"))\n",
+    "                .partitionKeys(Seq(\"year\"))\n",
+    "                .timeTravelFormat(TimeTravelFormat.HUDI)\n",
+    "                .build())"
    ]
   },
   {
@@ -773,7 +725,7 @@
    "metadata": {},
    "source": [
     "#### Make the Upsert using Hopsworks Feature Store API\n",
-    "In Hopsworks Feature Store issuing `insert` method on Apache Hudi enabled feature group will by default perform `UPSERT` operation which means to either insert a new row, or on the basis of `parimary` and `partition` keys or update already existing one."
+    "In Hopsworks Feature Store issuing `insert` method on Apache Hudi enabled feature group will by default perform `Upsert` operation which means to either insert a new row, or on the basis of `parimary` and `partition` keys update already existing one."
    ]
   },
   {
